--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,25 @@
-.hi {
-  color: blue;
-}
+//ABSTRACTS
+@import 'abstracts/functions';
+@import 'abstracts/mixins';
+@import 'abstracts/variables';
+
+//BASE
+@import 'base/animations';
+@import 'base/reset';
+@import 'base/typography';
+
+//COMPONENTS
+
+//LAYOUT
+@import 'layout/footer';
+@import 'layout/header';
+@import 'layout/navigation';
+
+//PAGES
+@import 'pages/home';
+
+//TOOLS
+
+//UTILITIES
+
+@import 'utilities/utilities';
