--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 :root {
-  --cyan: hsl(180, 66%, 49%);
-  --dark-violet: hsl(257, 27%, 26%);
-  --red: hsl(0, 87%, 67%);
-  --gray: hsl(0, 0%, 75%);
-  --grayish-violet: hsl(257, 7%, 63%);
-  --very-dark-blue: hsl(255, 11%, 22%);
-  --very-dark-violet: hsl(260, 8%, 14%); }
+  --color-primary-light: hsl(180, 66%, 49%);
+  --color-primary-dark: hsl(257, 27%, 26%);
+  --color-secondary: hsl(0, 87%, 67%);
+  --color-gray-light-1: hsl(0, 0%, 75%);
+  --color-gray-light-2: hsl(257, 7%, 63%);
+  --color-gray-light-3: hsl(231, 30%, 95%);
+  --color-gray-dark-1: hsl(255, 11%, 22%);
+  --color-gray-dark-2: hsl(260, 8%, 14%); }
 
 *,
 *::after,
@@ -20,30 +21,89 @@ html {
 
 body {
   font-family: 'Poppins', sans-serif;
+  font-size: 1.6rem;
   font-weight: 500;
-  color: var(--gray); }
+  color: var(--color-gray-light-1); }
+
+ul {
+  list-style-type: none; }
+
+a {
+  text-decoration: none; }
+
+.btn {
+  color: #fff;
+  background-color: var(--color-primary-light);
+  font-size: 1.8rem;
+  font-weight: 700;
+  padding: 1.2rem 3.5rem;
+  border-radius: 5rem;
+  cursor: pointer; }
+  .btn:hover, .btn:active {
+    opacity: 0.5; }
+  .btn--small {
+    font-size: 1.6rem;
+    padding: 1rem 3rem; }
 
 .footer {
   grid-column: 2 / 12;
   grid-row: 5 / 6; }
 
 .header {
-  grid-column: 2 / -1;
-  grid-row: 2 / 3; }
+  grid-column: 2 / 12;
+  grid-row: 2 / 3;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(auto, 1fr); }
+  .header .heading-1 {
+    grid-column: 1 / 7;
+    grid-row: 1 / 4; }
+  .header .paragraph {
+    grid-column: 1 / 7;
+    grid-row: 4 / 5; }
+  .header .btn {
+    grid-column: 1 / 3;
+    grid-row: 5 / 6; }
+  .header__svg {
+    grid-column: 7 / 13;
+    grid-row: 1 / 7; }
 
 .nav {
   grid-column: 2 / 12;
-  grid-row: 1 / 2; }
+  grid-row: 1 / 2;
+  align-self: center;
+  display: flex; }
+  .nav .logo {
+    height: 3.3rem;
+    cursor: pointer; }
+  .nav__list {
+    display: flex;
+    align-items: center;
+    font-weight: 700;
+    width: 100%; }
+  .nav__item:not(:last-child) {
+    margin-right: 3rem; }
+  .nav__item:nth-child(3) {
+    margin-right: auto; }
+  .nav__link {
+    color: var(--color-gray-light-2);
+    transition: all 0.2s ease-in-out; }
+    .nav__link:hover, .nav__link:active {
+      color: var(--color-gray-dark-1); }
 
-.home-grid {
+.home {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(5, min-content); }
+  grid-template-rows: 10rem 75vh repeat(3, min-content); }
 
 .section-about {
   grid-column: 2 / 12;
-  grid-row: 3 / 4; }
+  grid-row: 3 / 4;
+  background-color: var(--color-gray-light-3); }
 
 .section-cta {
   grid-column: 2 / 12;
   grid-row: 4 / 5; }
+
+.u-margin-right {
+  margin-right: 4rem !important; }
