--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,14 +1,16 @@
 :root {
-  // Primary
-  --cyan: hsl(180, 66%, 49%);
-  --dark-violet: hsl(257, 27%, 26%);
+  //Primary
+  --color-primary-light: hsl(180, 66%, 49%);
+  --color-primary-dark: hsl(257, 27%, 26%);
 
   // Secondary
-  --red: hsl(0, 87%, 67%);
+  --color-secondary: hsl(0, 87%, 67%);
 
   // Neutral
-  --gray: hsl(0, 0%, 75%);
-  --grayish-violet: hsl(257, 7%, 63%);
-  --very-dark-blue: hsl(255, 11%, 22%);
-  --very-dark-violet: hsl(260, 8%, 14%);
+  --color-gray-light-1: hsl(0, 0%, 75%);
+  --color-gray-light-2: hsl(257, 7%, 63%);
+  --color-gray-light-3: hsl(231, 30%, 95%);
+
+  --color-gray-dark-1: hsl(255, 11%, 22%);
+  --color-gray-dark-2: hsl(260, 8%, 14%);
 }
