--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,4 +1,28 @@
 .header {
-  grid-column: 2 / -1;
+  grid-column: 2 / 12;
   grid-row: 2 / 3;
+
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(auto, 1fr);
+
+  .heading-1 {
+    grid-column: 1 / 7;
+    grid-row: 1 / 4;
+  }
+
+  .paragraph {
+    grid-column: 1 / 7;
+    grid-row: 4 / 5;
+  }
+
+  .btn {
+    grid-column: 1 / 3;
+    grid-row: 5 / 6;
+  }
+
+  &__svg {
+    grid-column: 7 / 13;
+    grid-row: 1 / 7;
+  }
 }
