changed grid layout code

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,9 @@ body {
   font-family: 'Poppins', sans-serif;
   font-size: 1.6rem;
   font-weight: 500;
-  color: var(--color-gray-light-1); }
+  color: var(--color-gray-light-1);
+  width: 80vw;
+  margin: 0 auto; }
 
 ul {
   list-style-type: none; }
@@ -46,12 +48,10 @@ a {
     padding: 1rem 3rem; }
 
 .footer {
-  grid-column: 2 / 12;
-  grid-row: 5 / 6; }
+  grid-area: footer; }
 
 .header {
-  grid-column: 2 / 12;
-  grid-row: 2 / 3;
+  grid-area: header;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(auto, 1fr); }
@@ -69,8 +69,7 @@ a {
     grid-row: 1 / 7; }
 
 .nav {
-  grid-column: 2 / 12;
-  grid-row: 1 / 2;
+  grid-area: nav;
   align-self: center;
   display: flex; }
   .nav .logo {
@@ -93,17 +92,16 @@ a {
 
 .home {
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: 10rem 75vh repeat(3, min-content); }
+  grid-template-columns: 1fr;
+  grid-template-rows: 10rem 75vh repeat(3, min-content);
+  grid-template-areas: 'nav' 'header' 'about' 'cta' 'footer'; }
 
 .section-about {
-  grid-column: 2 / 12;
-  grid-row: 3 / 4;
+  grid-area: about;
   background-color: var(--color-gray-light-3); }
 
 .section-cta {
-  grid-column: 2 / 12;
-  grid-row: 4 / 5; }
+  grid-area: cta; }
 
 .u-margin-right {
   margin-right: 4rem !important; }
