--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -17,6 +17,8 @@ body {
   font-size: 1.6rem;
   font-weight: 500;
   color: var(--color-gray-light-1);
+  width: 80vw;
+  margin: 0 auto;
 }
 
 ul {
