--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,17 +1,21 @@
 .home {
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
+  grid-template-columns: 1fr;
   grid-template-rows: 10rem 75vh repeat(3, min-content);
+  grid-template-areas:
+    'nav'
+    'header'
+    'about'
+    'cta'
+    'footer';
 }
 
 .section-about {
-  grid-column: 2 / 12;
-  grid-row: 3 / 4;
+  grid-area: about;
 
   background-color: var(--color-gray-light-3);
 }
 
 .section-cta {
-  grid-column: 2 / 12;
-  grid-row: 4 / 5;
+  grid-area: cta;
 }
