--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,6 +1,7 @@
 :root {
   //Primary
-  --color-primary-light: hsl(180, 66%, 49%);
+  --color-primary-light-1: hsl(180, 66%, 49%);
+  --color-primary-light-2: hsl(180, 54%, 74%);
   --color-primary-dark: hsl(257, 27%, 26%);
 
   // Secondary
