--- a/sass/utilities/utilities.scss
+++ b/sass/utilities/utilities.scss
@@ -1,3 +1,13 @@
-.u-margin-right {
-  margin-right: 4rem !important;
+//MARGIN X-AXIS
+.u-mx-auto {
+  margin: 0 auto;
+}
+
+//MARGIN RIGHT
+.u-mr-sm {
+  margin-right: 3rem !important;
+}
+
+.u-mr-md {
+  margin-right: 5rem !important;
 }
