--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 :root {
-  --color-primary-light: hsl(180, 66%, 49%);
+  --color-primary-light-1: hsl(180, 66%, 49%);
+  --color-primary-light-2: hsl(180, 54%, 74%);
   --color-primary-dark: hsl(257, 27%, 26%);
   --color-secondary: hsl(0, 87%, 67%);
   --color-gray-light-1: hsl(0, 0%, 75%);
@@ -17,7 +18,9 @@
 
 html {
   font-size: 62.5%;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  max-width: 100%;
+  overflow-x: hidden; }
 
 body {
   font-family: 'Poppins', sans-serif;
@@ -33,19 +36,50 @@ ul {
 a {
   text-decoration: none; }
 
+input {
+  border: none; }
+
+.heading-1 {
+  font-size: 8rem;
+  color: var(--color-gray-dark-1); }
+
+.paragraph {
+  font-size: 2.5rem;
+  line-height: 3.2rem; }
+
 .btn {
   color: #fff;
-  background-color: var(--color-primary-light);
+  background-color: var(--color-primary-light-1);
   font-size: 1.8rem;
   font-weight: 700;
-  padding: 1.2rem 3.5rem;
+  padding: 1.2rem 3rem;
   border-radius: 5rem;
-  cursor: pointer; }
+  cursor: pointer;
+  height: 4.5rem; }
   .btn:hover, .btn:active {
-    opacity: 0.5; }
+    background-color: var(--color-primary-light-2); }
+  .btn-secondary {
+    border-radius: 1rem; }
   .btn--small {
     font-size: 1.6rem;
     padding: 1rem 3rem; }
+
+.url-shortner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 1rem;
+  background-color: var(--color-primary-dark);
+  background-image: url("../images/bg-shorten-desktop.svg");
+  background-repeat: no-repeat;
+  background-size: cover; }
+  .url-shortner__input {
+    width: 55vw;
+    height: 4.5rem;
+    margin-right: 2rem;
+    border-radius: 1rem; }
 
 .footer {
   grid-area: footer; }
@@ -53,20 +87,32 @@ a {
 .header {
   grid-area: header;
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(auto, 1fr); }
-  .header .heading-1 {
-    grid-column: 1 / 7;
-    grid-row: 1 / 4; }
-  .header .paragraph {
-    grid-column: 1 / 7;
-    grid-row: 4 / 5; }
-  .header .btn {
-    grid-column: 1 / 3;
-    grid-row: 5 / 6; }
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 30rem 10rem 10rem 13rem;
+  position: relative; }
   .header__svg {
-    grid-column: 7 / 13;
-    grid-row: 1 / 7; }
+    grid-column: 2 / 3;
+    grid-row: 1 / 4;
+    align-self: center;
+    width: 70rem;
+    position: absolute;
+    top: 2.5rem;
+    right: -25rem; }
+  .header .heading-1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    align-self: end; }
+  .header .paragraph {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3; }
+  .header .btn {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+    justify-self: start; }
+  .header .url-shortner {
+    grid-column: 1 / 3;
+    grid-row: 4 / 5;
+    justify-self: end; }
 
 .nav {
   grid-area: nav;
@@ -93,7 +139,7 @@ a {
 .home {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 10rem 75vh repeat(3, min-content);
+  grid-template-rows: 10rem 60rem repeat(3, min-content);
   grid-template-areas: 'nav' 'header' 'about' 'cta' 'footer'; }
 
 .section-about {
@@ -103,5 +149,11 @@ a {
 .section-cta {
   grid-area: cta; }
 
-.u-margin-right {
-  margin-right: 4rem !important; }
+.u-mx-auto {
+  margin: 0 auto; }
+
+.u-mr-sm {
+  margin-right: 3rem !important; }
+
+.u-mr-md {
+  margin-right: 5rem !important; }
