--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -10,6 +10,10 @@ html {
   // This defines what 1rem is
   font-size: 62.5%; //1 rem = 10px; 10px/16px = 62.5%
   box-sizing: border-box;
+
+  //Disables side scrolling
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -27,4 +31,8 @@ ul {
 
 a {
   text-decoration: none;
+}
+
+input {
+  border: none;
 }
