--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,15 +1,20 @@
 .btn {
   color: #fff;
-  background-color: var(--color-primary-light);
+  background-color: var(--color-primary-light-1);
   font-size: 1.8rem;
   font-weight: 700;
-  padding: 1.2rem 3.5rem;
+  padding: 1.2rem 3rem;
   border-radius: 5rem;
   cursor: pointer;
+  height: 4.5rem;
 
   &:hover,
   &:active {
-    opacity: 0.5;
+    background-color: var(--color-primary-light-2);
+  }
+
+  &-secondary {
+    border-radius: 1rem;
   }
 
   &--small {
