--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,26 +1,40 @@
 .header {
   grid-area: header;
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(auto, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 30rem 10rem 10rem 13rem;
+  position: relative;
+
+  &__svg {
+    grid-column: 2 / 3;
+    grid-row: 1 / 4;
+    align-self: center;
+    width: 70rem;
+    position: absolute;
+    top: 2.5rem;
+    right: -25rem;
+  }
 
   .heading-1 {
-    grid-column: 1 / 7;
-    grid-row: 1 / 4;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    align-self: end;
   }
 
   .paragraph {
-    grid-column: 1 / 7;
-    grid-row: 4 / 5;
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
   }
 
   .btn {
-    grid-column: 1 / 3;
-    grid-row: 5 / 6;
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+    justify-self: start;
   }
 
-  &__svg {
-    grid-column: 7 / 13;
-    grid-row: 1 / 7;
+  .url-shortner {
+    grid-column: 1 / 3;
+    grid-row: 4 / 5;
+    justify-self: end;
   }
 }
