--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,7 +1,7 @@
 .home {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 10rem 75vh repeat(3, min-content);
+  grid-template-rows: 10rem 60rem repeat(3, min-content);
   grid-template-areas:
     'nav'
     'header'
