--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,7 @@ body {
   font-family: 'Poppins', sans-serif;
   font-size: 1.6rem;
   font-weight: 500;
-  color: var(--color-gray-light-1);
-  width: 80vw;
-  margin: 0 auto; }
+  color: var(--color-gray-light-1); }
 
 ul {
   list-style-type: none; }
@@ -138,9 +136,9 @@ input {
 
 .home {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 10vw 1fr 10vw;
   grid-template-rows: 10rem 60rem repeat(3, min-content);
-  grid-template-areas: 'nav' 'header' 'about' 'cta' 'footer'; }
+  grid-template-areas: '. nav .' '. header .' 'about about about' 'cta cta cta' 'footer footer footer'; }
 
 .section-about {
   grid-area: about;
