--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,8 @@ body {
   font-family: 'Poppins', sans-serif;
   font-size: 1.6rem;
   font-weight: 500;
-  color: var(--color-gray-light-1); }
+  color: var(--color-gray-light-1);
+  background-color: #fefefe; }
 
 ul {
   list-style-type: none; }
@@ -35,29 +36,34 @@ a {
   text-decoration: none; }
 
 input {
-  border: none; }
+  border: none;
+  outline: none; }
 
 .heading-1 {
   font-size: 8rem;
   color: var(--color-gray-dark-1); }
 
+.heading-2 {
+  font-size: 4rem; }
+  .heading-2--dark {
+    color: var(--color-gray-dark-1); }
+  .heading-2--light {
+    color: #fefefe; }
+
 .paragraph {
-  font-size: 2.5rem;
   line-height: 3.2rem; }
 
 .btn {
-  color: #fff;
+  color: #fefefe;
   background-color: var(--color-primary-light-1);
   font-size: 1.8rem;
   font-weight: 700;
-  padding: 1.2rem 3rem;
+  padding: 1.4rem 4rem;
   border-radius: 5rem;
   cursor: pointer;
-  height: 4.5rem; }
+  height: 5rem; }
   .btn:hover, .btn:active {
     background-color: var(--color-primary-light-2); }
-  .btn-secondary {
-    border-radius: 1rem; }
   .btn--small {
     font-size: 1.6rem;
     padding: 1rem 3rem; }
@@ -75,9 +81,13 @@ input {
   background-size: cover; }
   .url-shortner__input {
     width: 55vw;
-    height: 4.5rem;
+    height: 5rem;
     margin-right: 2rem;
-    border-radius: 1rem; }
+    border-radius: 1rem;
+    padding: 0 3rem; }
+    .url-shortner__input::placeholder {
+      color: var(--color-gray-light-2);
+      font-size: 1.8rem; }
 
 .footer {
   grid-area: footer; }
@@ -110,7 +120,9 @@ input {
   .header .url-shortner {
     grid-column: 1 / 3;
     grid-row: 4 / 5;
-    justify-self: end; }
+    justify-self: end;
+    position: absolute;
+    top: 3.5rem; }
 
 .nav {
   grid-area: nav;
@@ -137,21 +149,47 @@ input {
 .home {
   display: grid;
   grid-template-columns: 10vw 1fr 10vw;
-  grid-template-rows: 10rem 60rem repeat(3, min-content);
-  grid-template-areas: '. nav .' '. header .' 'about about about' 'cta cta cta' 'footer footer footer'; }
+  grid-template-rows: 10rem 60rem 80rem repeat(2, min-content);
+  grid-template-areas: '. nav .' '. header .' 'features features features' 'boost boost boost' 'footer footer footer'; }
 
-.section-about {
-  grid-area: about;
+.section-features {
+  grid-area: features;
+  display: grid;
+  grid-template-columns: 10vw 1fr 1fr 1fr 10vw;
+  grid-template-rows: 25rem 10rem 25rem 1fr;
+  column-gap: 2.5rem;
   background-color: var(--color-gray-light-3); }
+  .section-features .heading-2 {
+    grid-column: 2 / 5;
+    grid-row: 1 / 2;
+    justify-self: center;
+    align-self: end; }
+  .section-features .paragraph {
+    grid-column: 2 / 5;
+    grid-row: 2 / 3;
+    place-self: center;
+    text-align: center; }
+  .section-features .feature-box {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4; }
 
-.section-cta {
-  grid-area: cta; }
+.section-boost {
+  grid-area: boost; }
 
 .u-mx-auto {
-  margin: 0 auto; }
+  margin: 0 auto !important; }
 
 .u-mr-sm {
   margin-right: 3rem !important; }
 
 .u-mr-md {
   margin-right: 5rem !important; }
+
+.u-radius-1 {
+  border-radius: 1rem !important; }
+
+.u-fs-1 {
+  font-size: 2rem !important; }
+
+.u-fs-2 {
+  font-size: 2.5rem !important; }
