--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -21,6 +21,7 @@ body {
   font-size: 1.6rem;
   font-weight: 500;
   color: var(--color-gray-light-1);
+  background-color: #fefefe;
 }
 
 ul {
@@ -33,4 +34,5 @@ a {
 
 input {
   border: none;
+  outline: none;
 }
