--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,7 +3,16 @@
   color: var(--color-gray-dark-1);
 }
 
+.heading-2 {
+  font-size: 4rem;
+
+  &--dark {
+    color: var(--color-gray-dark-1);
+  }
+  &--light {
+    color: #fefefe;
+  }
+}
 .paragraph {
-  font-size: 2.5rem;
   line-height: 3.2rem;
 }
