--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,21 +1,43 @@
 .home {
   display: grid;
   grid-template-columns: 10vw 1fr 10vw;
-  grid-template-rows: 10rem 60rem repeat(3, min-content);
+  grid-template-rows: 10rem 60rem 80rem repeat(2, min-content);
   grid-template-areas:
     '. nav .'
     '. header .'
-    'about about about'
-    'cta cta cta'
+    'features features features'
+    'boost boost boost'
     'footer footer footer';
 }
 
-.section-about {
-  grid-area: about;
-
+.section-features {
+  grid-area: features;
+  display: grid;
+  grid-template-columns: 10vw 1fr 1fr 1fr 10vw;
+  grid-template-rows: 25rem 10rem 25rem 1fr;
+  column-gap: 2.5rem;
   background-color: var(--color-gray-light-3);
+
+  .heading-2 {
+    grid-column: 2 / 5;
+    grid-row: 1 / 2;
+    justify-self: center;
+    align-self: end;
+  }
+
+  .paragraph {
+    grid-column: 2 / 5;
+    grid-row: 2 / 3;
+    place-self: center;
+    text-align: center;
+  }
+
+  .feature-box {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+  }
 }
 
-.section-cta {
-  grid-area: cta;
+.section-boost {
+  grid-area: boost;
 }
