--- a/sass/utilities/utilities.scss
+++ b/sass/utilities/utilities.scss
@@ -1,13 +1,27 @@
-//MARGIN X-AXIS
+//MARGIN
 .u-mx-auto {
-  margin: 0 auto;
+  margin: 0 auto !important;
 }
 
-//MARGIN RIGHT
 .u-mr-sm {
   margin-right: 3rem !important;
 }
 
 .u-mr-md {
   margin-right: 5rem !important;
+}
+
+//BORDER
+
+.u-radius-1 {
+  border-radius: 1rem !important;
+}
+
+//FONT
+
+.u-fs-1 {
+  font-size: 2rem !important;
+}
+.u-fs-2 {
+  font-size: 2.5rem !important;
 }
