--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,7 @@
 
 //COMPONENTS
 @import 'components/button';
-@import 'components/feature-box';
+@import 'components/feature';
 @import 'components/url-shortner';
 
 //LAYOUT
