--- a/css/style.css
+++ b/css/style.css
@@ -45,13 +45,13 @@ input {
 
 .heading-2 {
   font-size: 4rem; }
-  .heading-2--dark {
-    color: var(--color-gray-dark-1); }
   .heading-2--light {
     color: #fefefe; }
+  .heading-2--dark {
+    color: var(--color-gray-dark-1); }
 
-.paragraph {
-  line-height: 3.2rem; }
+.heading-3 {
+  color: var(--color-gray-dark-1); }
 
 .btn {
   color: #fefefe;
@@ -67,6 +67,23 @@ input {
   .btn--small {
     font-size: 1.6rem;
     padding: 1rem 3rem; }
+
+.feature {
+  background-color: #fefefe;
+  width: 30%;
+  padding: 4rem;
+  padding-top: 6rem;
+  border-radius: 1rem;
+  position: relative; }
+  .feature .icon-container {
+    display: inline-block;
+    background-color: var(--color-primary-dark);
+    width: 9rem;
+    height: 9rem;
+    padding: 2.5rem;
+    border-radius: 5rem;
+    position: absolute;
+    top: -4.5rem; }
 
 .url-shortner {
   display: flex;
@@ -102,7 +119,6 @@ input {
     grid-column: 2 / 3;
     grid-row: 1 / 4;
     align-self: center;
-    width: 70rem;
     position: absolute;
     top: 2.5rem;
     right: -25rem; }
@@ -149,29 +165,34 @@ input {
 .home {
   display: grid;
   grid-template-columns: 10vw 1fr 10vw;
-  grid-template-rows: 10rem 60rem 80rem repeat(2, min-content);
+  grid-template-rows: 10rem 60rem 90rem repeat(2, min-content);
   grid-template-areas: '. nav .' '. header .' 'features features features' 'boost boost boost' 'footer footer footer'; }
 
 .section-features {
   grid-area: features;
   display: grid;
-  grid-template-columns: 10vw 1fr 1fr 1fr 10vw;
-  grid-template-rows: 25rem 10rem 25rem 1fr;
-  column-gap: 2.5rem;
+  grid-template-columns: 10vw 1fr 10vw;
+  grid-template-rows: 25rem 20rem 25rem 1fr;
   background-color: var(--color-gray-light-3); }
   .section-features .heading-2 {
-    grid-column: 2 / 5;
+    grid-column: 2 / 3;
     grid-row: 1 / 2;
     justify-self: center;
     align-self: end; }
   .section-features .paragraph {
-    grid-column: 2 / 5;
-    grid-row: 2 / 3;
-    place-self: center;
-    text-align: center; }
-  .section-features .feature-box {
     grid-column: 2 / 3;
-    grid-row: 3 / 4; }
+    grid-row: 2 / 3; }
+  .section-features .feature-container {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+    display: flex;
+    justify-content: space-between; }
+    .section-features .feature-container .feature-2 {
+      position: relative;
+      top: 5rem; }
+    .section-features .feature-container .feature-3 {
+      position: relative;
+      top: 10rem; }
 
 .section-boost {
   grid-area: boost; }
@@ -185,11 +206,32 @@ input {
 .u-mr-md {
   margin-right: 5rem !important; }
 
+.u-mb-sm {
+  margin-bottom: 2rem !important; }
+
+.u-pt-sm {
+  padding-top: 2rem !important; }
+
+.u-pl-sm {
+  padding-left: 2rem !important; }
+
 .u-radius-1 {
   border-radius: 1rem !important; }
 
 .u-fs-1 {
-  font-size: 2rem !important; }
+  font-size: 2.5rem !important; }
 
 .u-fs-2 {
-  font-size: 2.5rem !important; }
+  font-size: 2rem !important; }
+
+.u-lh-sm {
+  line-height: 2.5rem !important; }
+
+.u-lh-md {
+  line-height: 3rem !important; }
+
+.u-lh-lg {
+  line-height: 3.5rem !important; }
+
+.u-center-text {
+  text-align: center !important; }
