--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,7 +1,7 @@
 .home {
   display: grid;
   grid-template-columns: 10vw 1fr 10vw;
-  grid-template-rows: 10rem 60rem 80rem repeat(2, min-content);
+  grid-template-rows: 10rem 60rem 90rem repeat(2, min-content);
   grid-template-areas:
     '. nav .'
     '. header .'
@@ -13,28 +13,36 @@
 .section-features {
   grid-area: features;
   display: grid;
-  grid-template-columns: 10vw 1fr 1fr 1fr 10vw;
-  grid-template-rows: 25rem 10rem 25rem 1fr;
-  column-gap: 2.5rem;
+  grid-template-columns: 10vw 1fr 10vw;
+  grid-template-rows: 25rem 20rem 25rem 1fr;
   background-color: var(--color-gray-light-3);
 
   .heading-2 {
-    grid-column: 2 / 5;
+    grid-column: 2 / 3;
     grid-row: 1 / 2;
     justify-self: center;
     align-self: end;
   }
 
   .paragraph {
-    grid-column: 2 / 5;
+    grid-column: 2 / 3;
     grid-row: 2 / 3;
-    place-self: center;
-    text-align: center;
   }
 
-  .feature-box {
+  .feature-container {
     grid-column: 2 / 3;
     grid-row: 3 / 4;
+    display: flex;
+    justify-content: space-between;
+
+    .feature-2 {
+      position: relative;
+      top: 5rem;
+    }
+    .feature-3 {
+      position: relative;
+      top: 10rem;
+    }
   }
 }
 
