--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,7 @@ input {
 .home {
   display: grid;
   grid-template-columns: 10vw 1fr 10vw;
-  grid-template-rows: 10rem 60rem 90rem repeat(2, min-content);
+  grid-template-rows: 10rem 60rem 90rem 20rem 1fr;
   grid-template-areas: '. nav .' '. header .' 'features features features' 'boost boost boost' 'footer footer footer'; }
 
 .section-features {
