--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,6 @@ body {
   font-family: 'Poppins', sans-serif;
   font-size: 1.6rem;
   font-weight: 500;
-  color: var(--color-gray-light-1);
   background-color: #fefefe; }
 
 ul {
@@ -52,6 +51,9 @@ input {
 
 .heading-3 {
   color: var(--color-gray-dark-1); }
+
+.paragraph {
+  color: var(--color-gray-light-1); }
 
 .btn {
   color: #fefefe;
@@ -107,7 +109,35 @@ input {
       font-size: 1.8rem; }
 
 .footer {
-  grid-area: footer; }
+  grid-area: footer;
+  display: grid;
+  grid-template-columns: 10vw 25vw 1fr 10vw;
+  background-color: var(--color-gray-dark-2);
+  padding-top: 5rem; }
+  .footer .heading-2 {
+    grid-column: 2 / 3; }
+  .footer__nav {
+    grid-column: 3 / 4;
+    display: flex;
+    justify-content: space-between;
+    color: #fefefe;
+    padding-top: 1.5rem; }
+  .footer__item:first-child {
+    font-weight: 700;
+    margin-bottom: 3rem; }
+  .footer__item:not(:first-child) {
+    margin-bottom: 1rem; }
+  .footer__link {
+    color: #fefefe;
+    transition: all 0.2s ease-in-out; }
+    .footer__link:hover, .footer__link:active {
+      color: var(--color-primary-light-1); }
+  .footer .social-media {
+    display: flex; }
+    .footer .social-media__item {
+      padding: 0 1rem; }
+    .footer .social-media__link:hover, .footer .social-media__link:active {
+      color: var(--color-primary-light-1); }
 
 .header {
   grid-area: header;
@@ -165,7 +195,7 @@ input {
 .home {
   display: grid;
   grid-template-columns: 10vw 1fr 10vw;
-  grid-template-rows: 10rem 60rem 90rem 25rem 1fr;
+  grid-template-rows: 10rem 60rem 90rem 25rem 30rem;
   grid-template-areas: '. nav .' '. header .' 'features features features' 'boost boost boost' 'footer footer footer'; }
 
 .section-features {
