--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,3 +1,54 @@
 .footer {
   grid-area: footer;
+  display: grid;
+  grid-template-columns: 10vw 25vw 1fr 10vw;
+  background-color: var(--color-gray-dark-2);
+  padding-top: 5rem;
+
+  .heading-2 {
+    grid-column: 2 / 3;
+  }
+
+  &__nav {
+    grid-column: 3 / 4;
+    display: flex;
+    justify-content: space-between;
+    color: #fefefe;
+    padding-top: 1.5rem;
+  }
+
+  &__item {
+    &:first-child {
+      font-weight: 700;
+      margin-bottom: 3rem;
+    }
+    &:not(:first-child) {
+      margin-bottom: 1rem;
+    }
+  }
+
+  &__link {
+    color: #fefefe;
+    transition: all 0.2s ease-in-out;
+
+    &:hover,
+    &:active {
+      color: var(--color-primary-light-1);
+    }
+  }
+
+  .social-media {
+    display: flex;
+
+    &__item {
+      padding: 0 1rem;
+    }
+
+    &__link {
+      &:hover,
+      &:active {
+        color: var(--color-primary-light-1);
+      }
+    }
+  }
 }
