--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,7 +1,7 @@
 .home {
   display: grid;
   grid-template-columns: 10vw 1fr 10vw;
-  grid-template-rows: 10rem 60rem 90rem 25rem 1fr;
+  grid-template-rows: 10rem 60rem 90rem 25rem 30rem;
   grid-template-areas:
     '. nav .'
     '. header .'
