--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   grid-area: footer;
   display: grid;
-  grid-template-columns: 10vw 25vw 1fr 10vw;
+  grid-template-columns: 10vw 30vw 1fr 10vw;
   background-color: var(--color-gray-dark-2);
   padding-top: 5rem;
 
@@ -41,13 +41,17 @@
     display: flex;
 
     &__item {
-      padding: 0 1rem;
+      padding-left: 2rem;
     }
 
-    &__link {
+    &__icon {
+      color: white;
+      font-size: 2.5rem;
+
       &:hover,
       &:active {
         color: var(--color-primary-light-1);
+        transition: all 0.2s ease-in-out;
       }
     }
   }
